@@ -460,7 +460,8 @@ Changes in the Python API
 
 * The following modules have had missing APIs added to their :attr:`__all__`
   attributes to match the documented APIs: :mod:`calendar`, :mod:`csv`,
-  :mod:`enum`, :mod:`fileinput`, :mod:`ftplib`, :mod:`logging`,
+  :mod:`~xml.etree.ElementTree`, :mod:`enum`,
+  :mod:`fileinput`, :mod:`ftplib`, :mod:`logging`,
   :mod:`optparse`, :mod:`tarfile`, :mod:`threading` and
   :mod:`wave`.  This means they will export new symbols when ``import *``
   is used.  See :issue:`23883`.
